Fixed change-notes in plugin.xml, so that they include complete notes

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,6 +8,15 @@
   <depends>org.jetbrains.idea.maven</depends>
   <idea-version since-build="201.6487.11"/>
 
+  <description>
+    This plugin adds features to JetBrains IntelliJ IDEA to integrate quarkus.io a lot better and make it behave like
+    a regular IntelliJ IDEA application. This means that this plugin will execute all necessary build steps automatically
+    and attaches a debugger if you want to. Debug your quarkus applications without effort!
+  </description>
+  <change-notes><![CDATA[ <ul>
+      <li>Fixed change-notes in plugin.xml, so that they include complete notes</li>
+    </ul> ]]></change-notes>
+
   <extensions defaultExtensionNs="com.intellij">
     <programRunner implementation="io.conceptive.quarkus.plugin.runconfig.QuarkusRunConfigRunner"/>
     <configurationType implementation="io.conceptive.quarkus.plugin.runconfig.QuarkusRunConfigType"/>
