Refactored class names to be more specific that maven is our build tool

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,7 +20,7 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <programRunner implementation="io.conceptive.quarkus.plugin.runconfig.QuarkusRunConfigRunner"/>
-    <configurationType implementation="io.conceptive.quarkus.plugin.runconfig.QuarkusRunConfigType"/>
+    <configurationType implementation="io.conceptive.quarkus.plugin.runconfig.QuarkusMavenRunConfigType"/>
   </extensions>
 
 </idea-plugin>
