QuarkusDebugRunConfig: Fixed message order, if messages arrive too early or too late

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,6 +17,7 @@
   </description>
   <change-notes><![CDATA[ <ul>
       <li>Added support for gradle</li>
+      <li>Fixed message order, if messages arrive too early</li>
       <li>Fixed change-notes in plugin.xml, so that they include complete notes</li>
       <li>Fixed corrupted console logs on slow machines</li>
     </ul> ]]></change-notes>
