--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "org.jetbrains.intellij" version "0.4.18"
 }
 
-project.group = "io.conceptive.quarkus"
+project.group = "io.conceptive.quarkus.plugin"
 project.version = "1.1.1"
 
 repositories {
