chore: Renamed to "Quarkus Run Configs"

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
 
-  <id>io.conceptive.quarkus-intellij-plugin</id>
-  <name>Quarkus Integration</name>
+  <id>io.conceptive.quarkus.plugin</id>
+  <name>Quarkus Run Configs</name>
   <vendor email="w.glanzer@conceptive.io">Werner Glanzer</vendor>
 
   <depends>com.intellij.modules.java</depends>
