chore: fixed plugin name during build

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 intellij {
-    pluginName = "QuarkusIntegration"
+    pluginName = "QuarkusRunConfigs"
     plugins = ["maven", "gradle", "java"]
     updateSinceUntilBuild = false
 }
