chore: plugin id can not be changed

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
 
-  <id>io.conceptive.quarkus.plugin</id>
+  <id>io.conceptive.quarkus-intellij-plugin</id>
   <name>Quarkus Run Configs</name>
   <vendor email="w.glanzer@conceptive.io">Werner Glanzer</vendor>
 
