--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,29 @@
-org.gradle.jvmargs=-Xmx512M -Xmx4G
+# IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
+
+pluginGroup = io.conceptive.quarkus.plugin
+pluginName = QuarkusRunConfigs
+pluginRepositoryUrl = https://github.com/conceptivesolutions/quarkus-intellij-plugin
+pluginVersion = 1.1.2
+
+# Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
+pluginSinceBuild = 201.6487.11
+pluginUntilBuild = 201.*
+
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
+platformType = IC
+platformVersion = LATEST-EAP-SNAPSHOT
+
+# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
+# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
+platformPlugins = com.intellij.java, com.intellij.gradle, org.jetbrains.idea.maven
+
+# Gradle Releases -> https://github.com/gradle/gradle/releases
+gradleVersion = 7.6
+
+# Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
+# suppress inspection "UnusedProperty"
+kotlin.stdlib.default.dependency = false
+
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+# suppress inspection "UnusedProperty"
+org.gradle.unsafe.configuration-cache = true
