--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ pluginRepositoryUrl = https://github.com/conceptivesolutions/quarkus-intellij-pl
 pluginVersion = 1.1.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 201.6487.11
-pluginUntilBuild = 201.*
+pluginSinceBuild = 231.7864.76
+pluginUntilBuild =
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = LATEST-EAP-SNAPSHOT
+platformVersion = 231.7864.76-EAP-SNAPSHOT
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
