--- a/gradle.properties
+++ b/gradle.properties
@@ -18,12 +18,16 @@ platformVersion=231.8109.175
 platformPlugins = com.intellij.java, com.intellij.gradle, org.jetbrains.idea.maven
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.6
+gradleVersion=8.2.1
 
-# Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
-# suppress inspection "UnusedProperty"
+# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-# suppress inspection "UnusedProperty"
-org.gradle.unsafe.configuration-cache = true
+org.gradle.configuration-cache=true
+
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching=true
+
+# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
+systemProp.org.gradle.unsafe.kotlin.assignment=true
